# macaroons

macaroon_test/: CMakeLists.txt  package.xml
macaroon_test/include/: macaroon.hpp  macaroon_verifier.hpp
macaroon_test/include/minimal_composition/: macaroon.hpp  macaroon_verifier.hpp
macaroon_test/src/: macaroon.cpp  macaroon_owner.cpp  macaroon_test.cpp  macaroon_user.cpp  macaroon_verifier.cpp  publisher_node.cpp  publisher_node_user.cpp
minimal_composition/: CMakeLists.txt
minimal_composition/include/minimal_composition/: macaroon.hpp  macaroon_verifier.hpp  publisher_node.hpp
minimal_composition/src/: macaroon.cpp  macaroon_verifier.cpp  publisher_node.cpp
